[package]
name = "sbml_simulator"
version = "0.1.0"
authors = ["santam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.3"
xmltree = "0.10.2"
xmlJSON = "*"
rustc-serialize = "0.3.24"

[dependencies.rust_sbml]
version = "0.3.0"
default_features=false
